# 3d-Print-Database

./: .gitignore  3D_Print_Database.desktop  3D_Print_Database_TUI.desktop  3D_Print_Database_TUI_RUST.desktop  3D_Print_Database_TUI_RUST_v0.4.0.desktop  3D_Print_Database_TUI_RUST_v1.1.0.desktop  3dPrintDB.sh  3dPrintDB_TUI.sh  3dPrintDB_TUI_RUST.sh  AGENTS.md  README.md  RebuildCodeGuidelines.txt  add_active_column.py  build_new.sh  db-admin.html  ensure_file_structure.py  install_desktop_app.sh  install_desktop_app_tui.sh  launch.sh  products_backup_20251130_090856.sql  run_create_item.sh  test_routine.txt  tree.txt
Code/: AGENTS.md  fix_permissions.sh
Code/backend/: Dockerfile  ensure_file_structure.py  index_products.py  pyproject.toml  requirements.txt  reset_database.py  restore_from_metadata.py
Code/backend/app/: crud.py  database.py  main.py  models.py  schemas.py  tag_utils.py
Code/backend/tests/: conftest.py  test_api.py  test_crud.py
Code/frontend/: 3dPrintDB.py  3dPrintDB.py.backup  3dPrintDB.py.backup-working  Cargo.toml  codeguidelines.txt  create_item.py
Code/frontend/modules/: __init__.py  api_client.py  constants.py  inventory.py  multi_selection.py  search.py  tags.py  toggles.py  ui_components.py  utils.py
Code/frontend/src/: api.rs  app.rs  handlers.rs  handlers_dispatcher.rs.bak  handlers_testing_refactor.rs  main.rs  models.rs  state.rs  ui.rs
Code/frontend/src/handlers/: create.rs  delete.rs  delete.rs.backup  edit.rs  edit_mod.rs.bak  inventory.rs  key_handlers.rs  mod.rs  navigation.rs  new_item.rs  normal.rs  search.rs  select.rs  selection.rs  util.rs
Code/frontend/src/handlers/create/: create_category.rs  create_description.rs  create_materials.rs  create_name.rs  create_production.rs  create_tags.rs  mod.rs
Code/frontend/src/handlers/edit/: edit_categories.rs  edit_description.rs  edit_file_ops.rs  edit_materials.rs  edit_name.rs  edit_production.rs  edit_tags.rs  mod.rs
Code/frontend/src/handlers/normal/: mod.rs  navigation.rs  search_input.rs  shortcuts.rs
Code/frontend/src/handlers/select/: material_select.rs  mod.rs  tag_select.rs
Code/frontend/src/ui/: draw.rs  mod.rs
Code/frontend_TUI/: README.md  app.py  config.py  main.py  test.py  test_colors.py  test_colors_minimal.py  test_execution.py  test_uniform_colors.py
Code/frontend_tui_rust/: Cargo.toml
Code/infra/: docker-compose.yml
Products/PRO-0001/: metadata.json
Products/TOY-0002/: metadata.json
Products/print_tool-0001/: metadata.json
Products/toy-0001/: metadata.json
backend/: Dockerfile  ensure_file_structure.py  index_products.py
backend/app/: crud.py  (+3 more)
frontend/: create_item.py
frontend_tui_rust/: Cargo.toml  README.md
frontend_tui_rust/src/: api.rs  app.rs  handlers.rs  main.rs  models.rs  state.rs  ui.rs
infra/: docker-compose.yml
(+34 files in other folders)
