[package]
name = "printdb"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.28", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"